@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.46 2003/06/03 20:41:15 salo Exp $
+# $NetBSD: Makefile,v 1.47 2003/06/06 15:26:48 abs Exp $
 #
 
-DISTNAME=	cpuflags-0.44
+DISTNAME=	cpuflags-0.45
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 DISTFILES=	# empty
